tests/baselines/reference/for-of22.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of22.ts(15,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of22.ts (1 errors) ====
    class Foo { }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    v;
    for (var v of new FooIterator) {
                  ~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        
    }